<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I-AIUR</string>
    <string name="title_activity_main">账户概览</string>
    <string name="title_activity_new_group">创建小组</string>
    <string name="title_activity_join_group">加入小组</string>
    <string name="title_activity_group_tab">小组</string>

    <!-- Splash -->
    <string name="splash_promote_text">美味，我们抱团而来。</string>
    <string name="splash_loading_text">开启中...</string>

    <!-- Login page -->
    <string name="hint_login_account">账户</string>
    <string name="hint_login_pwd">密码</string>
    <string name="btn_login">登陆</string>
    <string name="btn_register">注册</string>

    <!-- Register page -->
    <string name="hint_reg_email">账号</string>
    <string name="hint_reg_nick">昵称</string>
    <string name="hint_reg_pwd">密码</string>
    <string name="hint_reg_confirm_pwd">确认密码</string>

    <!-- Main page -->
    <string name="main_title_balance">余额累计：</string>
    <string name="main_title_cost">消费累计：</string>
    <string name="main_group_select">[%s]</string>
    <string name="main_group_change">其它...</string>
    <string name="main_group_create">创建小组</string>
    <string name="main_group_join">加入小组</string>
    <string name="main_group_profile">我的账户</string>
    <string name="menu_create_group">创建小组</string>
    <string name="menu_join_group">加入小组</string>
    <string name="msg_main_group_consume" formatted="false">[%1$s]消费 %2$s两.</string>

    <!-- New group -->
    <string name="new_group_hint_name">小组名称</string>
    <string name="new_group_hint_desc">小组介绍</string>
    <string name="btn_new_group_create">创建</string>

    <!-- Join group -->
    <string name="join_group_search_hint">查找小组</string>
    <string name="join_group_search_title">查找</string>
    <string name="btn_join_request">加入</string>

    <!-- Profile -->
    <string name="text_setup_avatar">设置头像</string>
    <string name="text_setup_avatar_local">本地</string>
    <string name="text_setup_avatar_camera">拍照</string>
    <string name="text_setup_avatar_cancel">取消</string>
    <string name="text_error_no_storage">未找到存储卡，无法存储照片！</string>
    <string name="hint_change_pwd_old">原密码</string>

    <string name="text_change_pwd">* 修改密码</string>
    <string name="btn_change_pwd">确认</string>
    <string name="text_common_change_pwd">密码修改已成功！</string>

    <!-- Group tag page -->
    <string name="title_section_index">小组</string>
    <string name="title_section_message">消息</string>
    <string name="title_section_charge">付款</string>
    <string name="title_section_prepay">充值</string>
    <string name="title_section_manage">管理</string>

    <!-- Group tag page @index -->
    <string name="tab_index_cash_title">个人余额:</string>
    <string name="tab_index_btn_prepay">充值</string>
    <string name="tab_index_btn_charge">付款</string>
    <string name="msg_index_join_group_req">%s 申请加入小组。</string>
    <string name="msg_index_join_group">%s 加入了小组。</string>
    <string name="msg_index_join_group_left">%s 离开了小组。</string>
    <string name="msg_index_group_consume" formatted="false">消费%1$s /人均%2$s.</string>
    <string name="msg_index_group_incoming" formatted="false">[%1$s]补充白银 %2$s 两！</string>
    <string name="msg_index_who_join">参与人员：%s</string>
    <string name="msg_index_consume_invalid">补充白银 %s 两，充值无效！</string>
    <string name="msg_index_consume_pending">审批中</string>
    <string name="msg_index_incoming_pending">充值中</string>
    <string name="msg_index_funny_1">北风那个吹啊。。</string>
    <string name="msg_index_funny_2">路边小摊随便吃点吧。。</string>
    <string name="msg_index_funny_3">吃了上顿没下顿。。</string>
    <string name="msg_index_funny_4">悠着点，还能吃两顿。。</string>
    <string name="msg_index_funny_5">吃！吃！吃！</string>
    <string name="msg_index_funny_6">壕！壕！壕！</string>

    <!-- Group tag page @manage -->
    <string name="tabManageRequestTitle">申请条目</string>
    <string name="tabManageUserTitle">人员管理</string>
    <string name="tabManageUserListItemJoinRequest">申请加入</string>
    <string name="tabManageUserListItemButtonApprove">批准</string>
    <string name="tabManageUserListItemButtonReject">拒绝</string>
    <string name="tabManageUserListItemButtonRemove">移除</string>
    <string name="tabManageUserListItemButtonCancel">无效</string>
    <string name="msg_manage_group_consume" formatted="false">消费%1$s 申请人：%2$s. %3$s</string>
    <string name="msg_manage_user_incoming" formatted="false">充值%1$s 申请人：%2$s</string>

    <!-- Group tag page @message -->
    <!-- Group tag page @prepay -->
    <string name="tab_prepay_title">小组预付款</string>
    <string name="tab_prepay_amount_hint">金額</string>
    <string name="btn_prepay_user">充值</string>

    <!-- Group tag page @charge -->
    <string name="btn_charge_group">记账</string>
    <string name="tab_charge_amount_title">消费</string>
    <string name="tab_charge_amount_hint">金額</string>
    <string name="tab_charge_desc_hint">描述</string>
    <string name="charge_prepay">代付</string>

    <!-- Common message -->
    <string name="common_add_group_req">申请已提交，等待审批中。</string>
    <string name="warn_add_group_req">申请失败，请稍后重试。</string>
    <string name="common_group_charge_req">付款申请已提交，审批中。</string>
    <string name="common_group_charge_res">扣款已完成，请确认。</string>
    <string name="common_group_prepay_req">充值申请已提交，审批中。</string>
    <string name="common_group_prepay_res">充值已完成，请确认。</string>
    <string name="common_group_manage_finance">申请信息已更新。</string>
    <string name="common_group_manage_user">用户信息已更新。</string>
    <!-- Error message -->
    <string name="generic_server_down">服务器异常，请稍后重试</string>
    <string name="no_internet">网络异常，请确认您的网络状态！</string>
    <string name="generic_error">异常，请稍后重试！</string>
    <string name="invalid_path">请求路径非法！</string>
    <string name="invalid_response_format">PROGRAM > 响应解析失败！</string>
    <string name="no_input_value">请输入相关信息！</string>
    <string name="pwd_not_consist">密码不一致，请重新输入！</string>
    <string name="error_email_format">无效的邮箱地址！</string>
    <string name="error_msg">未知异常</string>
    <string name="error_msg_4000">4000</string>
    <string name="error_msg_4001">为了账户安全，请重新登陆！</string>
    <string name="error_msg_4002">为了账户安全，请重新登陆！</string>
    <string name="error_msg_4003">错误的请求信息，请确认！</string>
    <string name="error_msg_4004">用户登陆失败，请确认账户信息！</string>
    <string name="error_msg_4005">请输入账号！</string>
    <string name="error_msg_4006">请输入密码！</string>
    <string name="error_msg_4007">请输入用户名！</string>
    <string name="error_msg_4008">账号已被注册，请重新选择账号！</string>
    <string name="error_msg_4009">创建账号失败，请稍后重试！</string>
    <string name="error_msg_4010">请输入小组名称！</string>
    <string name="error_msg_4011">未查询到相关小组信息，请输入其他关键字查询。</string>
    <string name="error_msg_4012">该小组已存在，请重新设置小组名称！</string>
    <string name="error_msg_4013">密码错误，请确认原密码后重试！</string>
    <string name="tagSearchGroupListJoinButton">TagSearchGroupListJoinButton</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>