<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context="com.origin.aiur.activity.logon.RegisterActivity">


    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_reg_email"/>

    <EditText
        android:id="@+id/registerNick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_reg_nick"/>


    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_reg_pwd"/>

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_reg_confirm_pwd"/>

    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/commonBlueButtonHeight"
        android:layout_marginTop="@dimen/reg.button.margin.topBottom"
        android:background="@drawable/button_blue_bg"
        android:clickable="true"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/commonBlueButtonTextColor"
        android:textSize="@dimen/commonBlueButtonTextSize"
        android:textStyle="bold"
        android:text="@string/btn_register"
        android:minWidth="@dimen/reg.button.MinWidth"
        android:maxWidth="@dimen/reg.button.MaxWidth"
        android:layout_gravity="center"/>
</LinearLayout>
