<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.origin.aiur.activity.group.NewGroupActivity">

    <EditText
        android:id="@+id/newGroupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_group_hint_name"/>

    <EditText
        android:id="@+id/newGroupIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:lines="4"
        android:hint="@string/new_group_hint_desc"/>

    <TextView
        android:id="@+id/btnNewGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/commonBlueButtonHeight"
        android:background="@drawable/button_blue_bg"
        android:clickable="true"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/commonBlueButtonTextColor"
        android:textSize="@dimen/commonBlueButtonTextSize"
        android:textStyle="bold"
        android:text="@string/btn_new_group_create"
        android:layout_marginTop="@dimen/loginButtonMarginTopBottom"
        android:layout_marginLeft="@dimen/loginButtonMarginLeftRight"
        android:layout_marginRight="@dimen/loginButtonMarginLeftRight" />
</LinearLayout>
