<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.origin.aiur.activity.group.GroupTabActivity$PlaceholderFragment">

    <ListView
        android:id="@+id/groupTabChargeUserList"
        android:layout_marginBottom="@dimen/tabChargeUserListMarginBottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </ListView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_block_separator"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/tabChargeCashPaddingTop"
        android:paddingBottom="@dimen/tabChargeCashPaddingBottom"
        android:paddingLeft="@dimen/tabChargeCashPaddingLeft"
        android:paddingRight="@dimen/tabChargeCashPaddingRight">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tabChargeCashTextSize"
            android:text="@string/tab_charge_amount_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tabChargeCashInputMarginLeft"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/chargeMoneyNumber"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:numeric="decimal|signed"
                android:ems="10"
                android:hint="@string/tab_charge_amount_hint"/>

            <LinearLayout
                android:id="@+id/chargePrePayContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chargePrePayBox"
                    android:layout_width="@dimen/tabChargeCheckboxWidth"
                    android:layout_height="@dimen/tabChargeCheckboxHeight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/charge_prepay"
                    android:textStyle="bold"
                    android:textSize="@dimen/tabChargeCheckboxTextSize"/>

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/chargeMoneyDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tabChargeCashInputMarginLeft"
            android:inputType="textMultiLine"
            android:lines="2"
            android:gravity="top"
            android:hint="@string/tab_charge_desc_hint"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_block_separator"/>

    <TextView
        android:id="@+id/btnConsumeChargeForGroup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/commonBlueButtonHeight"
        android:background="@drawable/button_blue_bg"
        android:clickable="true"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="@color/commonBlueButtonTextColor"
        android:textSize="@dimen/commonBlueButtonTextSize"
        android:textStyle="bold"
        android:text="@string/btn_charge_group"
        android:layout_marginTop="@dimen/tabChargeButtonMarginTop"
        android:layout_marginLeft="@dimen/tabChargeButtonMarginLeft"
        android:layout_marginRight="@dimen/tabChargeButtonMarginRight"
        android:layout_marginBottom="@dimen/tabChargeButtonMarginBottom"
        android:enabled="false"/>

</LinearLayout>
