<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/loginContainerMarginLeft"
    android:paddingRight="@dimen/loginContainerMarginRight"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.origin.aiur.activity.logon.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/avatarIconMarginBottom"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="@dimen/commonAvatarLargeBgImageWidth"
                android:layout_height="@dimen/commonAvatarLargeBgImageHeight"
                android:src="@drawable/user_avatar_bg"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/loginUserAvatar"
                android:layout_width="@dimen/commonAvatarLargeImageWidth"
                android:layout_height="@dimen/commonAvatarLargeImageHeight"
                android:src="@drawable/user_avatar_default_unfocused"
                android:scaleType="fitCenter"
                android:layout_gravity="center" />

        </FrameLayout>

        <EditText
            android:id="@+id/loginAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/hint_login_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/editTextSplitWidth" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/hint_login_pwd" />

        <TextView
            android:id="@+id/loginLogon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/commonBlueButtonHeight"
            android:background="@drawable/button_blue_bg"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="@color/commonBlueButtonTextColor"
            android:textSize="@dimen/commonBlueButtonTextSize"
            android:textStyle="bold"
            android:text="@string/btn_login"
            android:layout_marginTop="@dimen/loginButtonMarginTopBottom"
            android:layout_marginLeft="@dimen/loginButtonMarginLeftRight"
            android:layout_marginRight="@dimen/loginButtonMarginLeftRight"
            android:enabled="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/loginRegister"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/loginRegButtonHeight"
        android:paddingLeft="@dimen/regButtonPaddingLeftRight"
        android:paddingRight="@dimen/regButtonPaddingLeftRight"
        android:background="@drawable/button_gray_bg"
        android:clickable="true"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:textSize="@dimen/regButtonTextSize"
        android:text="@string/btn_register"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
