<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/main.bg"
              tools:context="com.origin.aiur.activity.main.MainActivity"
              android:id="@+id/mainWin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/main.balance.padding.topBottom"
        android:paddingBottom="@dimen/main.balance.padding.topBottom"
        android:paddingLeft="@dimen/main.balance.padding.leftRight"
        android:paddingRight="@dimen/main.balance.padding.leftRight"
        android:background="@color/main.balance.bg">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/main_title_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main.grid.title.txt.size"
                android:textColor="@color/main.balance.txt"/>

            <TextView
                android:id="@+id/txtTotalBalance"
                android:text="0.00"
                android:textSize="@dimen/main.grid.label.txt.size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/main.balance.txt"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/main_title_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main.grid.title.txt.size"
                android:textColor="@color/main.balance.txt"/>

            <TextView
                android:id="@+id/txtTotalCost"
                android:text="0.00"
                android:textSize="@dimen/main.grid.label.txt.size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/main.balance.txt"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userGroupInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/mainGroupSelectMarginTop"
            android:layout_marginBottom="@dimen/mainGroupSelectMarginBottom"
            android:background="@drawable/round_corner_bg">

            <TextView
                android:id="@+id/btnGotoGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mainGroupSelectMarginLeft"
                android:layout_marginRight="@dimen/mainGroupSelectMarginRight"
                android:paddingTop="@dimen/mainGroupSelectPaddingTop"
                android:paddingBottom="@dimen/mainGroupSelectPaddingBottom"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textSize="@dimen/mainGroupButtonBarItemTxtSize"
                android:text="@string/main_group_select"/>

            <View
                android:id="@+id/btnGroupSplitLine"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/tab_index_btn_split"
                android:layout_marginLeft="@dimen/commonSplitLineMarginLeftRight"
                android:layout_marginRight="@dimen/commonSplitLineMarginLeftRight"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/btnChangeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mainGroupSelectMarginLeft"
                android:layout_marginRight="@dimen/mainGroupSelectMarginRight"
                android:paddingTop="@dimen/mainGroupSelectPaddingTop"
                android:paddingBottom="@dimen/mainGroupSelectPaddingBottom"
                android:clickable="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/mainGroupItemGray"
                android:textSize="@dimen/mainGroupButtonBarItemTxtSize"
                android:text="@string/main_group_change"
                android:visibility="gone"/>
        </LinearLayout>

        <ListView
            android:id="@+id/listGroupActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@color/main.bg">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userGroupModifyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_corner_bg"
        android:layout_marginTop="@dimen/mainGroupButtonBarMarginTop"
        android:visibility="gone">

        <TextView
            android:id="@+id/btnJoinGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mainGroupSelectMarginLeft"
            android:layout_marginRight="@dimen/mainGroupSelectMarginRight"
            android:paddingTop="@dimen/mainGroupSelectPaddingTop"
            android:paddingBottom="@dimen/mainGroupSelectPaddingBottom"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textSize="@dimen/mainGroupButtonBarItemTxtSize"
            android:text="@string/main_group_join"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/tab_index_btn_split"
            android:layout_marginLeft="@dimen/commonSplitLineMarginLeftRight"
            android:layout_marginRight="@dimen/commonSplitLineMarginLeftRight"/>

        <TextView
            android:id="@+id/btnCreateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mainGroupSelectMarginLeft"
            android:layout_marginRight="@dimen/mainGroupSelectMarginRight"
            android:paddingTop="@dimen/mainGroupSelectPaddingTop"
            android:paddingBottom="@dimen/mainGroupSelectPaddingBottom"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textSize="@dimen/mainGroupButtonBarItemTxtSize"
            android:text="@string/main_group_create"/>
    </LinearLayout>
</LinearLayout>
